Revert "fixed scrolling error on mobile (TESTING 1)"
This reverts commit aab02b584e9ae5901140ce224572921a00a69c93.

--- a/public/page-template/template.css
+++ b/public/page-template/template.css
@@ -55,6 +55,7 @@ main {
     }
     
     main {
-        overflow-y: auto;
+        height: 100%;
+        overflow-y: hidden;
     }
 }
